<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
	android:layout_height="wrap_content" android:orientation="vertical" android:padding="16dp">

	<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:orientation="horizontal">
		<ImageView android:id="@+id/icon" android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:src="@drawable/ic_launcher" android:layout_marginRight="8dp" />
		<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:orientation="vertical" android:layout_gravity="center_vertical">
			<TextView android:id="@+id/appName" style="@style/textMediumBold" android:text="@string/appName" />
			<TextView android:id="@+id/version" style="@style/textSmall" android:text="@string/version" />
		</LinearLayout>
	</LinearLayout>

	<TextView android:id="@+id/copyright" style="@style/textSmall" android:text="@string/copyright"
		android:layout_marginTop="4dp" android:layout_marginLeft="4dp" />

</LinearLayout>
