<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
	android:layout_height="wrap_content">
	<LinearLayout android:id="@+id/container" android:layout_width="match_parent" android:layout_height="wrap_content"
		android:orientation="vertical" android:padding="4dp">

		<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" style="@style/textMedium"
			android:layout_margin="8dp" android:textStyle="bold" android:text="@string/followUs" />

		<android.support.v7.widget.CardView android:id="@+id/facebook"
			android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/cardViewStyle"
			android:layout_marginTop="4dp" android:layout_marginLeft="8dp" android:layout_marginRight="8dp"
			android:foreground="?android:attr/selectableItemBackground">

			<LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
				android:layout_height="wrap_content" android:paddingRight="4dp" android:paddingTop="8dp" android:paddingBottom="8dp"
				android:gravity="center_vertical" android:background="@drawable/nav_drawer_secondary_item_selector"
				android:minHeight="@dimen/nav_drawer_main_min_height">

				<ImageView android:layout_width="@dimen/nav_drawer_icon_size" android:layout_height="@dimen/nav_drawer_icon_size"
					android:layout_marginLeft="@dimen/nav_drawer_icon_margin" android:layout_marginRight="@dimen/nav_drawer_icon_margin"
					android:duplicateParentState="true" android:src="@drawable/ic_facebook" />

				<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" style="@style/navDrawerItemText"
					android:duplicateParentState="true" android:text="@string/facebook" />
			</LinearLayout>

		</android.support.v7.widget.CardView>
		<android.support.v7.widget.CardView android:id="@+id/googlePlus"
			android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/cardViewStyle"
			android:layout_marginTop="2dp" android:layout_marginLeft="8dp" android:layout_marginRight="8dp"
			android:foreground="?android:attr/selectableItemBackground">

			<LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
				android:layout_height="wrap_content" android:paddingRight="4dp" android:paddingTop="8dp" android:paddingBottom="8dp"
				android:gravity="center_vertical" android:background="@drawable/nav_drawer_secondary_item_selector"
				android:minHeight="@dimen/nav_drawer_main_min_height">

				<ImageView android:layout_width="@dimen/nav_drawer_icon_size" android:layout_height="@dimen/nav_drawer_icon_size"
					android:layout_marginLeft="@dimen/nav_drawer_icon_margin" android:layout_marginRight="@dimen/nav_drawer_icon_margin"
					android:duplicateParentState="true" android:src="@drawable/ic_google_plus" />

				<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" style="@style/navDrawerItemText"
					android:duplicateParentState="true" android:text="@string/googlePlus" />
			</LinearLayout>

		</android.support.v7.widget.CardView>
		<android.support.v7.widget.CardView android:id="@+id/twitter" android:layout_width="match_parent"
			android:layout_height="wrap_content" style="@style/cardViewStyle" android:layout_marginTop="2dp"
			android:layout_marginLeft="8dp" android:layout_marginRight="8dp" android:foreground="?android:attr/selectableItemBackground">

			<LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
				android:layout_height="wrap_content" android:paddingRight="4dp" android:paddingTop="8dp" android:paddingBottom="8dp"
				android:gravity="center_vertical" android:background="@drawable/nav_drawer_secondary_item_selector"
				android:minHeight="@dimen/nav_drawer_main_min_height">

				<ImageView android:layout_width="@dimen/nav_drawer_icon_size" android:layout_height="@dimen/nav_drawer_icon_size"
					android:layout_marginLeft="@dimen/nav_drawer_icon_margin" android:layout_marginRight="@dimen/nav_drawer_icon_margin"
					android:duplicateParentState="true" android:src="@drawable/ic_twitter" />

				<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" style="@style/navDrawerItemText"
					android:duplicateParentState="true" android:text="@string/twitter" />
			</LinearLayout>

		</android.support.v7.widget.CardView>

		<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" style="@style/textMedium"
			android:layout_margin="8dp" android:textStyle="bold" android:text="@string/share" />

		<include android:id="@+id/shareSection" layout="@layout/share_section" />

		<android.support.v7.widget.CardView android:layout_width="match_parent"
			android:layout_height="wrap_content" style="@style/cardViewStyle" android:layout_marginTop="2dp"
			android:layout_marginLeft="8dp" android:layout_marginRight="8dp" android:foreground="?android:attr/selectableItemBackground">

			<com.google.android.gms.plus.PlusOneButton xmlns:plus="http://schemas.android.com/apk/lib/com.google.android.gms.plus"
				android:id="@+id/plusOneButton" android:layout_width="match_parent" android:layout_height="wrap_content"
				android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:layout_marginLeft="8dp"
				android:layout_marginRight="8dp" plus:size="standard" plus:annotation="inline" />

		</android.support.v7.widget.CardView>



	</LinearLayout>

</ScrollView>